# Data_Viz_Static

./: README.md  hello.py  pyproject.toml
data/: All_data_FIW_2013-2025.xlsx  iso.csv
milestones/: static_proposal.md
milestones/Milestone2/: milestone2.md  static_viz_draft.ipynb
src/: Static_Project_Democracy.ipynb
